# artekmed_prototyp_01

./: .gitignore  CMakeLists.txt  Dockerfile  README  README.md  SourceFiles.txt  conanfile.py
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindTBB.cmake  FindUbitrack.cmake
config/: artekmed_dependencies.dot  camera_texture.frag  camera_texture.fragmentshader  camera_texture.vert  cube.frag  cube.fragmentshader  cube.vert  cube.vertexshader  log4cpp.conf  simple_coord_system.dae  simple_coord_system.fbx  simple_coord_system.mb
config/dfgs/: artekmed_rs1_only.dfg  artekmed_rs1_only.srg  artekmed_rs2_only.dfg  artekmed_rs2_only.srg  artekmed_rs_recorder.dfg  artekmed_rs_recorder.srg  artekmed_rs_recorder_nodisplay.dfg  artekmed_rs_recorder_nodisplay.srg  artekmed_rsx2.dfg  artekmed_rsx2.srg  artekmed_single_camera_zed.dfg  artekmed_single_camera_zed.srg  artekmed_zed_only.dfg  artekmed_zed_only.srg  artekmed_zed_only_player.dfg  artekmed_zed_only_player.srg  artekmed_zed_playback.dfg  artekmed_zed_playback.srg  artekmed_zed_recorder.dfg  artekmed_zed_recorder.srg  artekmed_zed_rsx1.dfg  artekmed_zed_rsx1.srg  artekmed_zed_rsx1_playback.dfg  artekmed_zed_rsx1_playback.srg  artekmed_zed_rsx1_playback_debugvideo.dfg  artekmed_zed_rsx1_playback_debugvideo.srg  artekmed_zed_rsx2.dfg  artekmed_zed_rsx2.srg  artekmed_zed_rsx2_calib_simple.dfg  artekmed_zed_rsx2_calib_simple.srg  artekmed_zed_rsx2_depthmaps.dfg  artekmed_zed_rsx2_depthmaps.srg  artekmed_zed_rsx2_player.dfg  artekmed_zed_rsx2_player.srg  artekmed_zed_rsx2_recorder.dfg  artekmed_zed_rsx2_recorder.srg  artekmed_zed_rsx2_transformed.dfg  artekmed_zed_rsx2_transformed.srg  avc_camera_tracking_ubitrack.dfg  avc_camera_tracking_ubitrack.srg  (+21 more)
config/simple_demo/: SoftKinetic_FrameGrabber.dfg  SoftKinetic_FrameGrabber.srg  simple_mono_osx.dfg  simple_mono_win32_flycapture.dfg  simple_mono_win32_flycapture.srg  simple_mono_win32_flycapture_debug.dfg  simple_mono_win32_flycapture_debug.srg  simple_mono_win32_flycapture_multimarker.dfg  simple_mono_win32_flycapture_multimarker.srg
include/artekmed/: EigenWrapper.h  PointCloudProcessing.h  UbitrackBaseConnector.h  UbitrackHelpers.h  UbitrackImage.h  UbitrackImageRenderer.h  UbitrackImageShader.h  UbitrackPointCloudConnector.h  UbitrackPointCloudVisualizer.h  UbitrackViewControl.h  UbitrackVisualizer.h
include/artekmed/Compute/: DepthRegistration.h  DepthRegistrationOpenCL.h  OCLPointCloudProcessing.h  OCLPointCloudProcessor.h  OCLTestProcessor.h  ProgramWrapper.h  cl.hpp
include/artekmed/PointProcessing/: ClopAdapter.h  Common.h  Denoising.h  RegionGrowing.h  VoxelResampling.h
include/artekmed/PointProcessing/clopdemo/: clop.hpp  gaussian.hpp  mixture.hpp
include/artekmed/Ubitrack/: BaseConnector.h  CameraConnector.h
include/artekmed/Utils/: TemperatureColors.h
include/artekmed/Visualization/: UbitrackRenderManager.h  Visualization.h
include/artekmed/Visualization/Shader/: GeometryRenderer.h  ImageMaskShader.h  ImageShader.h  NormalShader.h  PhongShader.h  PickingShader.h  ShaderWrapper.h  Simple2DShader.h  SimpleBlackShader.h  SimpleShader.h  UbitrackImageShader.h
include/artekmed/Visualization/Utility/: BoundingBox.h  ColorMap.h  DrawGeometry.h  GLHelper.h  PointCloudPicker.h  SelectionPolygon.h  SelectionPolygonVolume.h  UbitrackImage.h
include/artekmed/Visualization/Visualizer/: GuiController.h  RenderOption.h  RenderOptionWithEditing.h  UbitrackViewControl.h  UbitrackVisualizer.h  ViewControl.h  ViewParameters.h  Visualizer.h
include/basic_facade_demo/: Mesh.h  Model.h  UbitrackBaseConnector.h  UbitrackImage.h  UbitrackImageRenderer.h  UbitrackImageShader.h  UbitrackSingleCameraConnector.h  UbitrackSingleCameraVisualizer.h  UbitrackViewControl.h  UbitrackVisualizer.h  glfwwindow.h  oglshader.h  renderer.h  stb_image.h  utconnector.h
include/basic_facade_example/: argparser.hpp
include/simple_ar_demo/: Mesh.h  Model.h  glfwwindow.h  renderer.h  utconnector.h
src/: CMakeLists.txt  Mesh.cpp  Model.cpp  PointCloudProcessing.cpp  UbitrackBaseConnector.cpp  UbitrackImage.cpp  UbitrackImageRenderer.cpp  UbitrackImageShader.cpp  UbitrackPointCloudConnector.cpp  UbitrackPointCloudVisualizer.cpp  UbitrackSingleCameraConnector.cpp  UbitrackSingleCameraVisualizer.cpp  UbitrackViewControl.cpp  UbitrackVisualizer.cpp  basic_facade_example.cpp  glfwwindow.cpp  main.cpp  renderer.cpp  shader.cpp  simple_ar_demo.cpp  texture.cpp  utconnector.cpp
src/Compute/: DepthRegistration.cpp  DepthRegistrationOpenCL.cpp  OCLPointCloudProcessing.cpp  OCLPointCloudProcessor.cpp  OCLTestProcessor.cpp  ProgramWrapper.cpp
src/OCL/: DepthRegistration.cl  HelloWorldKernels.cl  PointCloudKernels.cl
src/PointProcessing/: ClopAdapter.cpp  Common.cpp  Denoising.cpp  RegionGrowing.cpp  VoxelResampling.cpp
src/Ubitrack/: BaseConnector.cpp  CameraConnector.cpp
src/Visualization/: UbitrackRenderManager.cpp
src/Visualization/Shader/: GeometryRenderer.cpp  ImageMaskShader.cpp  ImageShader.cpp  NormalShader.cpp  PhongShader.cpp  PickingShader.cpp  ShaderWrapper.cpp  Simple2DShader.cpp  SimpleBlackShader.cpp  SimpleShader.cpp  UbitrackImageShader.cpp
src/Visualization/Utility/: BoundingBox.cpp  ColorMap.cpp  DrawGeometry.cpp  GLHelper.cpp  PointCloudPicker.cpp  SelectionPolygon.cpp  SelectionPolygonVolume.cpp  UbitrackImage.cpp
src/Visualization/Visualizer/: GuiController.cpp  RenderOption.cpp  RenderOptionWithEditing.cpp  UbitrackViewControl.cpp  UbitrackVisualizer.cpp  ViewControl.cpp  ViewParameters.cpp  Visualizer.cpp  VisualizerCallback.cpp  VisualizerRender.cpp
tools/bpftrace/: bpf_text_shared.c  ubitrack_dataflow_performance.py
tools/bpftrace/rendering_performance/: README.md  artekmed_rendering_performance.py  bpf_text_artekmed_shared.c
tools/bpftrace/ubitrack_dataflow/: bpf_text_dataflow_shared.c  ubitrack_dataflow_performance.py
